k8s/prometheus/prometheus-Service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: moonitoring
  labels:
    k8s-app: prometheus
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: prometheus
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  sessionAffinity: ClientIP
  selector:
    k8s-app: prometheus
