k8s/prometheus/grafana-Ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-grafana
  namespace: moonitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - hpa-grafana.oktanium.im
  rules:
  - host: hpa-grafana.oktanium.im
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
